--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="picture-resume-wrapper">
         <div class="picture-resume">
-        <span><img src="small.jpg" alt="" /></span>
+        <span><img src="https://github.com/chihhsunlin/myself3/blob/main/small.jpg" alt="" /></span>
         <svg version="1.1" viewBox="0 0 350 350">
   
   <defs>
