--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         
         <div class="paper-wrapper clearfix">
           <div class="experience-title">Journal</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-          <div class="job-description">[1] Chih-Hsun Lin, Chia-Yi Hsu, Chia-Mu Yu, Cao Yang, and Chun-Ying Huang. DPAF: Image Synthesis via Differentially Private Aggregation in Forward Phase. <em>IEEE Internet of Things Journal</em>, 2024. (Under Review)<br>
+          <div class="job-description">[1] Chih-Hsun Lin, Chia-Yi Hsu, Chia-Mu Yu, Cao Yang, and Chun-Ying Huang. DPAF: Image Synthesis via Differentially Private Aggregation in Forward Phase. <em>IEEE Internet of Things Journal</em>, 2024.<br>
             [2] Chih-Hsun Lin, Chia-Mu Yu, and Chun-Ying Huang. DPView:Differentially Private Data Synthesis through Domain Size Information. IEEE Internet of Things Journal, 2022.</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
         </div>
         
