--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <div class="experience-wrapper">
         <div class="company-wrapper clearfix">
           <div class="experience-title">Period</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-          <div class="time">Sep 2020 - Present<br><br></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
-          <div class="time">Sep 2016 - Jun 2020<br><br></div>
+          <div class="time">Sep 2020 - Sep 2025<br><br></div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+          <div class="time">Sep 2016 - Jan 2020<br><br></div>
           <div class="time">Sep 2008 - Jun 2012</div>
         </div>
         
