--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </ul>
       </div>
       <div class="contact-presentation"> <!-- YOUR PRESENTATION RESUME  -->
-        <p><span class="bold">Bio:</span> Chih-Hsun Lin is currently pursuing a Ph.D. degree with the Department of Computer Science, at National Yang Ming Chiao Tung University, Hsinchu, Taiwan. His research interests include neural network security and data privacy. </p>
+        <p><span class="bold">Bio:</span> Chih-Hsun Lin is an Assistant Professor in the Department of Computer Science at National Chengchi University, Taipei, Taiwan. He received his Ph.D. degree in Computer Science and Engineering from National Yang-Ming Chiao Tung University in September 2025. His research interests include neural network security and data privacy. </p>
       </div>
       <div class="contact-social clearfix">
         <ul class="list-titles">
