--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         
         <div class="paper-wrapper clearfix">
           <div class="experience-title">Journal</div> <!-- NAME OF THE COMPANY YOUWORK WITH  -->
-          <div class="job-description">[1] Chih-Hsun Lin, Chia-Yi Hsu, Chia-Mu Yu, Cao Yang, and Chun-Ying Huang. DPAF: Image Synthesis via Differentially Private Aggregation in Forward Phase. <em>IEEE IoT-J</em>, 2024.<br>
-            [2] Chih-Hsun Lin, Chia-Mu Yu, and Chun-Ying Huang. DPView:Differentially Private Data Synthesis through Domain Size Information. IEEE IoT-J, 2022.</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
+          <div class="job-description">[1] Chih-Hsun Lin, Chia-Yi Hsu, Chia-Mu Yu, Cao Yang, and Chun-Ying Huang. DPAF: Image Synthesis via Differentially Private Aggregation in Forward Phase. <em>IEEE IoT-J</em>, 2024. (Impact Factor:8.9, Field Ranking:11/258 (JCR 2024))<br>
+            [2] Chih-Hsun Lin, Chia-Mu Yu, and Chun-Ying Huang. DPView:Differentially Private Data Synthesis through Domain Size Information. IEEE IoT-J, 2022. (Impact Factor:10.6, Field Ranking:4/158 (JCR 2022))</div> <!-- THE TIME YOU WORK WITH THE COMPANY  -->
         </div>
         
         <div class="paper-wrapper clearfix">
